Refactored SMSServiceImpl for #1008